--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
+<%layout("/layouts/boilerplate")%>
 <body>
     <h3>All Listings</h3>
-    <form method="GET" action="/listings/new">
+    <!-- <form method="GET" action="/listings/new">
         <button>Create New Listing</button>
-    </form>
+    </form> -->
     <ul>
 <% for(let listing of alllistings) { %>
     <li>
@@ -20,4 +14,3 @@
 
     
 </body>
-</html>
