--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,7 +79,26 @@ body{
 }
 /* new page */
 
-.add-btn{
+.add-btn {
     background-color: #fe424d !important;
     border: none !important;
+}
+
+/* edit page  */
+.edit-btn{
+    background-color: #fe424d !important;
+    border: none !important;
+}
+
+/* show page */
+.show-img{
+    height: 30vh;
+}
+
+.btns{
+    display: flex;
+}
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
 }
