--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,27 +1,85 @@
 <%layout("/layouts/boilerplate")%>
 <body>
-     <h3>edit your Listing </h3>
-    <form method="POST" action="/listings/<%=listing._id%>?_method=PUT">
+  <div class="row mt-3">
+    <div class="col-8 offset-2">
+      <h3>Edit Your Listing</h3>
+      <form method="POST" action="/listings/<%=listing._id%>?_method=PUT" novalidate class="needs-validation ">
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            type="text"
+            value="<%=listing.title%>"
+            class="form-control"
+            required
+            name="Listing[title]"
+          />
+        </div>
+        <div class="row">
+          <div class="mb-3 col-md-8">
+            <label for="location" class="form-label">Location</label>
+            <input
+              type="text"
+              value="<%=listing.location%>"
+              class="form-control"
+              required
+              name="Listing[location]"
+            />
+            <div class="invalid-feedback">
+            please enter a valid location
+          </div>
+          </div>
+          <div class="mb-3 col-md-4">
+            <label for="country" class="form-label">Country</label>
+            <input
+              type="text"
+              value="<%=listing.country%>"
+              class="form-control"
+              required
+              name="Listing[country]"
+            />
+            <div class="invalid-feedback">
+            please enter a valid country
+          </div>
+          </div>
+        </div>
+        <div>
+          <label for="image" class="form-label">Image Link</label>
+          <input
+            type="text"
+            name="Listing[image][url]"
+            value="<%= listing.image.url %>"
+            class="form-control"
+            required
+            
+          />
+        </div>
 
-        <input type="text" value="<%=listing.title%>" name="Listing[title]">
-        <br>
-        <br>
-        <textarea name="Listing[description]"  id=""><%=listing.description%></textarea>
-        <br>
-        <input type="text" value="<%=listing.image%>" name="Listing[image]">
-        <br>
-        <br>
-        <input type="text" value="<%=listing.country%>" name="Listing[country]">
-        <br>
-        <br>
-        <input type="text" value="<%=listing.location%>" name="Listing[location]">
-        <br>
-        <br>
-        <input type="number" value="<%=listing.price%>" name="Listing[price]">
-        <br>
-        <br>
-        <button>upadte</button>
-    </form>
-    
-    
+        <div class="mb-3"></div>
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea name="Listing[description]" class="form-control"
+          required id="" placeholder=""><%=listing.description%> </textarea
+          >
+
+        </div>
+        <div class="mb-3">
+          <label for="price" class="form-label">Price</label>
+          <input
+            type="number"
+            value="<%=listing.price%>"
+           class="form-control"
+           required
+            name="Listing[price]"
+          />
+          <div class="invalid-feedback">
+            please enter a valid price
+          </div>
+        </div>
+
+        <button class="btn btn-dark edit-btn mt-3">upadte</button>
+      </form>
+    </div>
+
+  </div>
+  <script src="/js/script.js"></script>
 </body>
