made Error.ejs for common handling

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -15,7 +15,7 @@
           <input
             type="text"
             placeholder="Enter Title"
-            name="Listing[title]"
+            name="listing[title]"
             class="form-control"
             required
           />
@@ -28,7 +28,7 @@
         <div class="mb-3">
           <label for="description" class="form-label">Description</label>
           <textarea
-            name="Listing[description]"
+            name="listing[description]"
             placeholder="Write Description"
             id=""
             class="form-control"
@@ -40,7 +40,7 @@
           <input
             type="text"
             placeholder="enter image url/link"
-            name="Listing[image][url]"
+            name="listing[image][url]"
             class="form-control"
           />
         </div>
@@ -51,7 +51,7 @@
             <input
               type="number"
               placeholder="enter Price"
-              name="Listing[price]"
+              name="listing[price]"
               class="form-control"
               required
             />
@@ -64,7 +64,7 @@
             <input
               type="text"
               placeholder="enter Country name"
-              name="Listing[country]"
+              name="listing[country]"
               class="form-control"
               required
             />
@@ -78,7 +78,7 @@
           <input
             type="text"
             placeholder="enter Location"
-            name="Listing[location]"
+            name="listing[location]"
             class="form-control"
             required
           />
