--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,104 +1,107 @@
-body{
-    font-family: "Plus Jakarta Sans", sans-serif;
-    flex-direction: column;
-    min-height: 100vh;
+body {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-.container{
-    flex: 1;
+.container {
+  flex: 1;
 }
-
-
 
 /* navbar */
 
-.navbar{
-    height: 5rem;
-    background-color: white;
-
+.navbar {
+  height: 5rem;
+  background-color: white;
 }
 
-.fa-compass{
-    color: #fe424d;
-    font-size: 2rem;
-
+.fa-compass {
+  color: #fe424d;
+  font-size: 2rem;
 }
 
-.nav-link{
-    color: #222222 !important;
+.nav-link {
+  color: #222222 !important;
 }
-
 
 /* footer */
-
-.f-info-links a{
-    text-decoration: none;
-    color: #222222;
-
+.f-info-links a {
+  text-decoration: none;
+  color: #222222;
 }
 
-.f-info-links a:hover{
-    text-decoration: underline;
+.f-info-links a:hover {
+  text-decoration: underline;
 }
 
-.f-info-links,.f-info-socials,.f-info-brand{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+.f-info-links,
+.f-info-socials,
+.f-info-brand {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.f-info-socials i{
-    font-size: 1.2rem;
-    margin-right: 1rem;
+.f-info-socials i {
+  font-size: 1.2rem;
+  margin-right: 1rem;
 }
 
 .f-info {
-    height: 6rem;
-    text-align: center;
-    background-color: #ebebeb;
-    /* display: flex; add this back */
-    flex-wrap: wrap;
-    justify-content: space-evenly; 
-    align-items: center;
+  height: 6rem;
+  text-align: center;
+  background-color: #ebebeb;
+  display: flex; /* ✅ Needed for flexbox layout */
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
 
 /* card */
-.listing-link{
-    text-decoration: none;
+.listing-link {
+  text-decoration: none;
+}
+.listing-card{
+    border:none !important;
+    margin-bottom: 2rem;
+
+}
+.card-img-top{
+    border-radius: 1rem !important;
+    width:100% !important;
+    object-fit:cover !important ;
 }
 
-.card-img-overlay{
-    opacity: 0;
+.card-img-overlay {
+  opacity: 0;
 }
-.card-img-overlay:hover{
-    opacity: 0.2;
-    background-color: white;
+.card-img-overlay:hover {
+  opacity: 0.2;
+  background-color: white;
 }
 /* new page */
 
 .add-btn {
-    background-color: #fe424d !important;
-    border: none !important;
+  background-color: #fe424d !important;
+  border: none !important;
 }
 
 /* edit page  */
-.edit-btn{
-    background-color: #fe424d !important;
-    border: none !important;
+.edit-btn {
+  background-color: #fe424d !important;
+  border: none !important;
 }
 
 /* show page */
-.show-img{
-    height: 30vh;
+.show-img {
+  height: 30vh;
 }
 
-.btns{
-    display: flex;
+.btns {
+  display: flex;
 }
-.show-card{
-    padding-left: 0;
-    padding-right: 0;
+.show-card {
+  padding-left: 0;
+  padding-right: 0;
 }
