--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
   <div class="f-info">
     <div class="f-info-social">
       <i class="fa-brands fa-square-instagram"></i>
@@ -12,6 +12,24 @@
         <a href="/privacy">Privacy</a>
         <a href="/terms">Terms</a>
         
+    </div>
+  </div>
+</footer> -->
+<footer>
+  <div class="f-info">
+    <div class="f-info-socials">   <!-- changed to match CSS -->
+      <i class="fa-brands fa-square-instagram"></i>
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-square-linkedin"></i>
+    </div>
+
+    <div class="f-info-brand">     <!-- added class for brand -->
+        &copy; Wanderlust Private Limited
+    </div>
+
+    <div class="f-info-links">
+        <a href="/privacy">Privacy</a>
+        <a href="/terms">Terms</a>
     </div>
   </div>
 </footer>
