--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,7 +5,7 @@
 
     <% for (let listing of alllistings) { %>
       <a href="/listings/<%= listing._id %>" class="listing-link">
-        <div class="card col">
+        <div class="card col listing-card">
           <img
             src="<%= listing.image.url %>"
             class="card-img-top"
