--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,43 +1,100 @@
 <%layout("/layouts/boilerplate")%>
 
-  <div class="row">
-    <div class="col-8 offset-3">
+<div class="row mt-3">
+  <div class="col-8 offset-3">
+    <!-- Listing Title -->
+    <h3><%= listing.title %></h3>
 
+    <!-- Card -->
+    <div class="card col-8  listing-card">
+      <img
+        src="<%= listing.image.url %>"
+        class="card-img-top show-img"
+        alt="Listing_image"
+      />
+      <div class="card-body">
+        <p class="card-text">
+          <%= listing.description %><br />
+          ₹<%= listing.price.toLocaleString("en-IN") %><br />
+          <%= listing.location %><br />
+          <%= listing.country %>
+        </p>
+      </div>
+    </div>
+
+    <!-- Buttons -->
+    <div class="mt-3">
+      <a href="/listings/<%= listing._id %>/edit" class="btn btn-danger"
+        >Edit</a
+      >
+      <form
+        method="POST"
+        action="/listings/<%= listing._id %>?_method=DELETE"
+        class="d-inline"
+      >
+        <button type="submit" class="btn btn-dark">Delete</button>
+      </form>
     </div>
   </div>
-    <h3>List details</h3>
-</div>
-    <div class="card col-6 offset-3" >
-  <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="Listing_image">
-  <div class="card-body">
-    <p class="card-text">
-      <b><%=listing.title%></b>
-      <br>
-      
-      <%=listing.description%>
-      <br>
-      
-      &#8377;<%=listing.price.toLocaleString("en-IN")%>
-      <br>
-      
-      <%=listing.location%>
-      <br>
-      <%=listing.country%>
+  <div class="col-8 offset-3 mb-3">
+    <br />
+    <hr />
+    <h4>Leave a Review</h4>
+    <form
+      action="/Listings/<%= listing._id %>/reviews"
+      method="POST"
+      novalidate
+      class="needs-validation"
+    >
+      <div class="mb-3 mt-3"></div>
+      <div>
+        <label for="rating" class="form label">Rating</label>
+        <input
+          class="form-range"
+          type="range"
+          min="1"
+          max="5"
+          step="1"
+          id="rating"
+          name="review[rating]"
+        />
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment" class="form label">Comments</label>
+        <textarea
+          name="review[comment]"
+          class="form-control"
+          id="comment"
+          cols="30"
+          rows="5"
+          required
+        ></textarea>
+        <div class="invalid-feedback">Please add some feedback to review</div>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
+    </form>
+    <hr />
+    
+    <p><b>All Reviews</b></p>
+    <div class="row">
 
-    </p>
+      <% for (let review of listing.reviews) { %>
+        <div class="ms-3 card col-5 mb-3">
+        <div class="card-body">
+          <div class="card-title">Sam</div>
+          <p class="card-text">
+            <%= review.comment %> <br />
+            <b><%= review.rating %> stars</b>
+          </p>
+        </div>    
+            <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+              
+              <button class="btn btn-sm btn-dark">Delete</button>
+            </form>
+
+      </div>
+      <% } %>
+    </div>
+
   </div>
 </div>
-<br>
-
-<div class="btns">
-  <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit </a>
-  <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-  <button type="submit" class="btn btn-dark offset-5" >Delete </button>
-  </form>
-</div>
-   
-<br>
- </div>
-  
-
-
