--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -19,11 +19,8 @@
             class="form-control"
             required
           />
-          <div class="valid-feedback">
-            Title looks good
-          </div>
+          <div class="valid-feedback">Title looks good</div>
         </div>
-
 
         <div class="mb-3">
           <label for="description" class="form-label">Description</label>
@@ -40,7 +37,7 @@
           <input
             type="text"
             placeholder="enter image url/link"
-            name="listing[image][url]"
+            name="listing[image]"
             class="form-control"
           />
         </div>
@@ -55,9 +52,7 @@
               class="form-control"
               required
             />
-            <div class="invalid-feedback">
-            please enter a valid price
-          </div>
+            <div class="invalid-feedback">please enter a valid price</div>
           </div>
           <div class="mb-3 col-8 md-8">
             <label for="country" class="form-label">Country</label>
@@ -68,9 +63,7 @@
               class="form-control"
               required
             />
-            <div class="invalid-feedback">
-            please enter the location
-          </div>
+            <div class="invalid-feedback">please enter the location</div>
           </div>
         </div>
         <div class="mb-3">
@@ -82,9 +75,7 @@
             class="form-control"
             required
           />
-          <div class="invalid-feedback">
-            please enter the loaction
-          </div>
+          <div class="invalid-feedback">please enter the loaction</div>
         </div>
         <br />
 
