--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,11 +2,8 @@
 
 <div class="row mt-3">
   <div class="col-8 offset-3">
-    <!-- Listing Title -->
     <h3><%= listing.title %></h3>
-
-    <!-- Card -->
-    <div class="card col-8  listing-card">
+    <div class="card col-8 listing-card">
       <img
         src="<%= listing.image.url %>"
         class="card-img-top show-img"
@@ -14,34 +11,42 @@
       />
       <div class="card-body">
         <p class="card-text">
-          <%= listing.description %><br />
-          ₹<%= listing.price.toLocaleString("en-IN") %><br />
-          <%= listing.location %><br />
-          <%= listing.country %>
+          Owned BY:
+          <i><%= listing.owner.username %></i>
+          <br />
         </p>
+        <p class="card-text"><%= listing.description %><br /></p>
+        <p class="card-text">
+          ₹<%= listing.price.toLocaleString("en-IN") %><br />
+        </p>
+        <p class="card-text"><%= listing.location %><br /></p>
+        <p class="card-text"><%= listing.country %></p>
       </div>
     </div>
 
     <!-- Buttons -->
-    <div class="mt-3">
-      <a href="/listings/<%= listing._id %>/edit" class="btn btn-danger"
+<% if(currUser && listing.owner._id.equals(currUser._id)){%>
+    <div class="btns">
+      <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn"
         >Edit</a
       >
       <form
         method="POST"
         action="/listings/<%= listing._id %>?_method=DELETE"
-        class="d-inline"
+        
       >
-        <button type="submit" class="btn btn-dark">Delete</button>
+        <button type="submit" class="btn btn-dark offset-5">Delete</button>
       </form>
     </div>
   </div>
-  <div class="col-8 offset-3 mb-3">
-    <br />
+  <% } %>
+  <% if(currUser){%>
+    
     <hr />
+    <div class="col-8 offset-1 mb-3">
     <h4>Leave a Review</h4>
     <form
-      action="/Listings/<%= listing._id %>/reviews"
+      action="/listings/<%= listing._id %>/reviews"
       method="POST"
       novalidate
       class="needs-validation"
@@ -73,28 +78,31 @@
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
-    <hr />
+    <% } %>
+    <!-- All Reviews -->
     
     <p><b>All Reviews</b></p>
     <div class="row">
-
       <% for (let review of listing.reviews) { %>
-        <div class="ms-3 card col-5 mb-3">
+      <div class="ms-3 card col-5 mb-3">
         <div class="card-body">
-          <div class="card-title">Sam</div>
+          <div class="card-title">
+            <%= review.author ? review.author.username : "Anonymous" %>
+          </div>
           <p class="card-text">
             <%= review.comment %> <br />
             <b><%= review.rating %> stars</b>
           </p>
-        </div>    
-            <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
-              
-              <button class="btn btn-sm btn-dark">Delete</button>
-            </form>
-
+        </div>
+        <form
+          class="mb-3"
+          method="POST"
+          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+        >
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
       </div>
       <% } %>
     </div>
-
   </div>
 </div>
