--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -34,10 +34,10 @@
           ></textarea>
         </div>
         <div class="mb-3">
-          <label for="image" class="form-label">Upload Image</label>
+          <label for="image" class="form-label" >Upload Image</label>
           <input
             type="file"
-            
+            required
             name="listing[image]"
             class="form-control"
           />
