--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -23,18 +23,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/rating.css" />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v3.15.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.15.0/mapbox-gl.js"></script>
   </head>
   <body>
     <%- include("../includes/navbar.ejs")%>
-  
+
     <h1>Wanderlust</h1>
     <div class="container">
-      
-<%- include("../includes/flash.ejs") %>
-      <%-body%>
+      <%- include("../includes/flash.ejs") %> <%-body%>
     </div>
     <%- include("../includes/footer.ejs")%>
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
