--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -126,10 +126,11 @@
         </div>
       </div>
       <% } %>
+      <% if(listing.reviews.length > 0){ %>
 
       <!-- Reviews List -->
-      <h5 class="mb-3">All Reviews</h5>
       <div class="row">
+        <h5 class="mb-3">All Reviews</h5>
         <% listing.reviews.forEach(review => { %>
         <div class="col-12 col-md-6 mb-3">
           <div class="card h-100">
@@ -157,6 +158,10 @@
         </div>
         <% }) %>
       </div>
+      <% }  %>
     </div>
-  </div>
+    </div>
+    
 </div>
+
+
